--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "Event": "aleclarson/Event#2.0.1",
     "Tappable": "aleclarson/Tappable#1.0.0",
-    "modx": "aleclarson/modx#1.0.0"
+    "gesture": "aleclarson/gesture#2.0.1",
+    "modx": "aleclarson/modx#1.0.0",
+    "objectify": "aleclarson/objectify#1.0.0"
   }
 }
