--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "Tappable": "aleclarson/Tappable#1.0.0",
+    "TapResponder": "aleclarson/TapResponder#1.2.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
     "modx": "aleclarson/modx#1.0.0",
     "parseOptions": "aleclarson/parseOptions#1.0.0"
